@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a too strict check on the minimum intensities of parent an child
+    calculations
   * Extended the ebrisk calculator to compute at the same time both the
     aggregate curves by tag and the total curves
 
